# clive

./: .gitignore  CHANGELOG  LICENSE  README.md  clive.py  index.html  params.json  pyproject.toml  requirements.txt  setup.py
clive/: __init__.py  cli.py  clive.py
tests/: test_clive.py
